Bug 127158 - [ONLINE Calc] Date format does not honour format settings
Summary: [ONLINE Calc] Date format does not honour format settings
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice Online
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-26 02:31 UTC by Franklin Weng
Modified: 2020-04-02 09:20 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample file on CODE (349.82 KB, image/png)
2019-08-26 02:31 UTC, Franklin Weng
Details
The same file opened by LibreOffice Calc (offline) (278.16 KB, image/png)
2019-08-26 02:32 UTC, Franklin Weng
Details
Sample ODS with a couple of dates (10.60 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-09-02 00:43 UTC, Aron Budea
Details
Screenshot of sample in LOOL (76.08 KB, image/png)
2019-09-02 00:44 UTC, Aron Budea
Details
Screenshot of sample in LO (92.09 KB, image/png)
2019-09-02 00:44 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Franklin Weng 2019-08-26 02:31:05 UTC
Created attachment 153649 [details]
Sample file on CODE

When cells contains formatted date string, showing in offline (i.e. LibreOffice) version is correct but when opening it on LOOL or CODE the date format will become MM/DD/YYYY.
Comment 1 Franklin Weng 2019-08-26 02:32:05 UTC
Created attachment 153650 [details]
The same file opened by LibreOffice Calc (offline)

This is the correct setting YYYY/MM/DD.  However when opening the same file the date format would become MM/DD/YYYY automatically.
Comment 2 Aron Budea 2019-09-02 00:43:23 UTC
Created attachment 153805 [details]
Sample ODS with a couple of dates

Confirmed in a master build when using the attached sample.
The different columns have dates in different locale formats (Chinese (traiditional), English (USA), German (Germany), French (France)), and apparently only the Chinese one isn't displayed correctly.
Comment 3 Aron Budea 2019-09-02 00:44:11 UTC
Created attachment 153806 [details]
Screenshot of sample in LOOL
Comment 4 Aron Budea 2019-09-02 00:44:34 UTC
Created attachment 153807 [details]
Screenshot of sample in LO
Comment 5 Commit Notification 2020-04-02 09:15:19 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dff729704687889f960562f0ac6fa62b47897cf9

tdf#127158 :lokit: preload liblocaledata_others.so

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.